--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,6 +9,6 @@ body {
 
 div {
 	display: block;
-	background: rgba(0.0, 0.0, 0.0, 0.25);
-	padding: 5px;
+	background: #00000055;
+	padding: 25px;
 }
