--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,4 +10,9 @@ body {
 div {
 	display: block;
 	background: url(image/bg.png);
+	padding: 25px;
+	width: 100%;
+	height: 100%;
+	width: 100vw;
+	height: 100vh;
 }
