--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,8 +11,6 @@ div {
 	display: block;
 	background: url(image/bg.png);
 	padding: 25px;
-	width: 100%;
-	height: 100%;
-	width: 100vw;
-	height: 100vh;
+	width: 200px;
+	height: 1080px;
 }
